add source to meta

--- a/DiscordBorders.theme.css
+++ b/DiscordBorders.theme.css
@@ -4,6 +4,7 @@
  * @description Adds a simple yet fairly customizable border to discord's main window
  * @author Lucyuwu
  * @authorId 911388263967752223
+ * @source https: //github.com/Average-Cirilo-Enjoyer/DiscordBorder
  */
 
  :root {
